# code

./: .clang-format  .gitignore  README.md  init.sh  jaws.py  setup.sh
ai/: Dockerfile
ai/convolution/: .gitignore  README.md  cpu_conv.cc  cpu_conv2d.cc  gpu_conv.cu  gpu_conv2d.cu  init.sh  pytorch_conv.py  run_test.py  setup.py  test.py  test_cpu_conv.cc  test_gpu_conv.cu
ai/docker/: run.sh  setup.sh
ai/stock/: README.md  run.sh  stock.py
c_cpp_program/: Makefile  binary_map.txt  bubble_sort.c  dfs.cpp  malloc.c  matrix.c  merge_sort.c  queue_linklist.c  scanf.c  stack_dfs_maze.cpp  stack_linklist.c
cl_gl_interpolation/00_OpenCL_Procedural_Geometric_Displacement_Example/: ReadMe.txt
cmake/00-hello-world/: CMakeLists.txt
cmake/00_hello-world/: CMakeLists.txt  README.md
cmake/01_student/: CMakeLists.txt
cmake/02_student-lib-shared/: CMakeLists.txt
cmake/03_student-lib-static/: CMakeLists.txt
cmake/04_use-student-lib/: CMakeLists.txt  libtest.cpp
cpp_test_code/: const.cpp  delegate.cpp  friend_function_01.cpp  inheritance.cpp  multiple_inheritance.cpp  queue_bfs_maze.cpp  type_qualifierr.cpp  user_defined_smart_ptr.cpp  virtual.cpp  virtual_method.cpp  virtual_table.cpp
cpp_tutorials/: DeepCopy.cc  ShallowCopy.cc  callby.cc  callby.cpp  const.cc  deep_copy.cc  deep_copy.cpp  delegate.cc  friend_class.cc  friend_class.cpp  friend_function_01.cc  friend_function_02.cc  friend_function_02.cpp  inheritance.cc  init.sh  multiple_inheritance.cc  multiple_inheritance_01.cc  multiple_inheritance_01.cpp  multiple_inheritance_02.cc  multiple_inheritance_02.cpp  private_protected_public.cc  private_protected_public.cpp  pure_virtual.cc  shallow_copy.cc  shallow_copy.cpp  string_operator.cc  string_operator.cpp  strlen.cc  strlen.cpp  template_class.cc  template_class.cpp  template_class_specialization.cc  template_class_specialization.cpp  template_type.cc  template_type.cpp  try_catch.cc  try_catch.cpp  try_catch_throw.cc  try_catch_throw.cpp  type_qualifierr.cc  (+8 more)
cuda/: Makefile  log  print.py
cuda/img/: lena_grey_128.pgm  lena_grey_256.pgm  lena_rgba_128.ppm
cuda/src/: crash_debug_1.cu  crash_debug_2.cu  cuda_memory_model.cu  device_kernel.cu  grey_sobelfilter_tex.cu  resizepic_tex2D.cu  rgba_sobelfilter_global.cu  rgba_sobelfilter_local.cu
design_patterns/: README.md
design_patterns/creational_patterns/: README.md
design_patterns/structural_patterns/: README.md
docker/tensorflow/: Dockerfile
egl/: compile.sh  egl_example.c  egl_gbm.c
font/: Makefile  ftdump.h  pangoft2.c  pangoft2.cc
githooks/: commit-msg  prepare-commit-msg
gpu/cuda/: CMakeLists.txt  Makefile  run
gpu/cuda/common/: exception.h  helper_cuda.h  helper_cuda_drvapi.h  helper_string.h
gpu/cuda/img/: lena_grey_1024.pgm  lena_rgba_1024.ppm  lena_rgba_256.ppm
gpu/cuda/src/: atomicAdd.cu  atomic_add.cu  crash.cu  crash_debug_0.cu  crash_debug_2.cu  device_kernel.cu  grey_sobelfilter_global.cu  grey_sobelfilter_local.cu  multi_dim.cu  one_dim.cu  print_in_kernel.cu  resizepic_tex2D.cu  rgba_sobelfilter_global.cu  rgba_sobelfilter_tex.cu  simplePrintf.cu  sobelfilter.cu
gpu/cuda/src/masterclass/: 08_index.cu  dim.cu  dim_v1.cu  reduction.cu  warp_divergence.cu
gpu/cuda/src/test/: atomic_add.cu  crash.cu  crash_debug_0.cu  crash_debug_1.cu  cuda_memory_model.cu  grey_sobelfilter_global.cu  grey_sobelfilter_tex.cu  multi_dim.cu  one_dim.cu  print_in_kernel.cu  resizepic_tex2D.cu  rgba_sobelfilter_local.cu  rgba_sobelfilter_tex.cu  simple_printf.cu  sobelfilter.cu  test.cu
gpu/opencl/: .gitignore  CMakeLists.txt
gpu/opencl/Gemm/: gemm.cl  main.cc
gpu/opencl/QueryInfo/: main.cc
gpu/opencl/Saxpy/: main.cc  saxpy.cl
gpu/opencl/clDeviceQuery/: Makefile
gpu/opencl/common/: util.h
gpu/opencl/gemm/: gemm.cl  multi_queue.cpp
gpu/opencl/src/gemm/: gemm.cl  main.cc
gpu/opencl/src/multi_queue/: main.cc
gpu/opencl/src/saxpy/: main.cc  saxpy.cl
gpu/texture_to_bitmap/: Makefile  bitmap_test.cpp
hooks/: LICENSE  commit-msg  pre-commit  prepare-commit-msg
json/: JsonCache.cc  JsonCache.h
matlab/: Queue.m  client.js  server.m  test.txt
matlab/socket_node_matlab/: Queue.js  client.js  receive.m  send.m  server.m  test.txt
opencl/clDeviceQuery/: clDeviceQuery.cpp
opencl/gemm/: Makefile  gemm.c  gemm.cl  gemm.cpp  multi_queue.cpp
opencl/intel-opencl-sdk/: opencl-1.2-base_3.1.1.11385-2_amd64.deb  opencl-1.2-devel_3.1.1.11385-2_amd64.deb
opencl/opencl_device/: Makefile
opengl/OpenGL_example/: DisplayLists.c  GLInfo.c  Makefile  OpenGLInfo.c  RenderToTexture.c  SpinningCube.c  TextureGen.c  Viewport.c  Water.c
opengl/antons_opengl_tutorials/: build.sh  tags
opengl/redbook/: aaindex.c  aapoly.c  aargb.c  alpha.c  bezcurve.c  bezmesh.c  bezsurf.c  checker.c  clip.c  colormat.c  dof.c  fog.c  fogindex.c  image.c  list.c  mipmap.c  picksquare.c  planet.c  quadric.c  scene.c  select.c  smooth.c  stencil.c  stroke.c  teapots.c  tess.c  tesswind.c  texbind.c  texgen.c  texprox.c  texsub.c  texturesurf.c  varray.c
problem_solving/: README.md
problem_solving/algorithms/: DFS.cc  Graph.cc  HeapSort.cc  ListNode.cc  Makefile  Malloc.cc  Matrix.cc  MazeBFSQueue.cc  MazeDFSStack.cc  QueueBFSMaze.cc  README.md  Sort.cc  StackDFSMaze.cc  StackLinkedList.cc  Tree.cc  TrieNode.cc  TrieNodeWithMap.cc  Virtual.cc  bubble_sort.c  dfs.cpp  init.sh  merge_sort.c  queue_bfs_maze.cpp  queue_linklist.c  scanf.c
problem_solving/baekjoon/: 2178_data.txt  2178_queue_bfs.cc  2178_stack_dfs.cc
problem_solving/codility/: 17_NumberSolitaire.cc  1_BinaryGap.cc  2_CyclicRotation.cc  2_OddOccurrencesInArray.cc  3_FrogJmp.cc  3_PermMissingElem.cc  3_TapeEquilibrium.cc  4_FrogRiverOne.cc  4_MaxCounters.cc  4_PermCheck.cc  5_CountDiv.cc  5_GenomicRangeQuery.cc  5_MinAvgTwoSlice.cc  5_PassingCars.cc  6_Distinct.cc  6_MaxProductOfThree.cc  6_Triangle.cc  7_Brackets.cc  7_Fish.cc  7_Nesting.cc  7_StoneWall.cc  init.sh  (+5 more)
python/: README.md  log  test.py
seccomp/: compile.sh  example01.c  example02.c  example03.c  run.sh
texture_to_bitmap/: opengl_test.cpp
ws/: ClientSync.cc  ClientSync.h
(+2501 files in other folders)
